# PolinomialRootFinder

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_all  developer_test  do_test
include/: ComplexSupport.hpp  Deflate.hpp  Deflate2.hpp  Example.hpp  Muller.hpp  Parabola.hpp  PrintPolynomial.hpp  polynomial.hpp
sandbox/: Main.cpp
src/: CMakeLists.txt  Main.cpp
test/: CMakeLists.txt  ChancherSandbox.cpp  ConvergenceTest.cpp  CristianSandbox.cpp  DeflateTest.cpp  IreneSandbox.cpp  MullerTest.cpp  Sandbox.cpp
